--- a/index.html
+++ b/index.html
@@ -32,12 +32,32 @@ text-align: center;
 
 
     <h1>séries</h1>
-<img src="">
+    <img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqZHKXZquSjzBY3364IHMEAxZe3Y-RWHA6poao6IGcEzSAWV-1h5MiwSjcac0kI5dlJlk&usqp=CAU    ">
 
     <p>séries de terror </p>
 
 <h1>    </h1>
 <p>    </p>
+
+<header>
+<nav>
+<div>
+<ul>
+
+
+<li> <a href=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqZHKXZquSjzBY3364IHMEAxZe3Y-RWHA6poao6IGcEzSAWV-1h5MiwSjcac0kI5dlJlk&usqp=CAUtecmundo.com.br/minha-serie/pretty-little-liars "> Pretty Little Liars  </a></li>
+
+</ul>
+
+</div>
+</nav>
+
+</header>
+
+<div>
+
+
+
 
 
 
