--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ text-align: center;
 <ul>
 
 
-<li> <a href=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqZHKXZquSjzBY3364IHMEAxZe3Y-RWHA6poao6IGcEzSAWV-1h5MiwSjcac0kI5dlJlk&usqp=CAUtecmundo.com.br/minha-serie/pretty-little-liars "> Pretty Little Liars  </a></li>
-
+<li> <a href=" https://pt.wikipedia.org/wiki/Pretty_Little_Liars_(s%C3%A9rie_de_televis%C3%A3o) "> Pretty Little Liars </li></a>
 </ul>
 
 </div>
